@@ -311,7 +311,7 @@
     <email>redfox@redfoxcenter.org</email>
   </person>
   <!-- fr translation coordinator -->
-  <person id="x-stephaneraimbault">
+  <person id="stephaner">
     <name>Stéphane Raimbault</name>
     <email>stephane.raimbault@gmail.com</email>
   </person>
@@ -452,11 +452,15 @@
     <name>Changwoo Ryu</name>
     <email>cwryu@debian.org</email>
   </person>
-  <!-- ku translation coordinator -->
+  <!-- former ku translation coordinator -->
   <person id="x-abdullahulas">
-    <!-- FIXME: commits by someone else -->
     <name>Abdullah Ulas</name>
     <email>ulas@sdf.lonestar.org</email>
+  </person>
+  <!-- ku translation coordinator -->
+  <person id="eronahi">
+    <name>Erdal Ronahi</name>
+    <email>erdal.ronahi@gmail.com</email>
   </person>
   <!-- lo translation coordinator -->
   <person id="x-anousaksouphavanh">
@@ -508,7 +512,7 @@
     <name>Rajesh Ranjan</name>
     <email>rajeshkajha@yahoo.com</email>
   </person>
-  <person id="x-thierryrandrianiriana">
+  <person id="thierryr">
     <name>Thierry Randrianiriana</name>
     <email>randrianiriana@gmail.com</email>
   </person>
