@@ -176,7 +176,7 @@
   </team>
   <team id="fr">
     <_language id="fr">French</_language>
-    <coordinator id="x-stephaneraimbault"/>
+    <coordinator id="stephaner"/>
     <webpage>http://gnomefr.traduc.org/</webpage>
     <userpage>http://www.gnomefr.org/</userpage>
     <bugzilla-component>French [fr]</bugzilla-component>
@@ -312,7 +312,7 @@
   </team>
   <team id="ku">
     <_language id="ku">Kurdish</_language>
-    <coordinator id="x-abdullahulas"/>
+    <coordinator id="eronahi"/>
     <webpage>http://gnome-kurdi.sourceforge.net/</webpage>
   </team>
   <team id="lo">
@@ -356,7 +356,9 @@
   </team>
   <team id="mg">
     <_language id="mg">Malagasy</_language>
-    <coordinator id="x-thierryrandrianiriana"/>
+    <coordinator id="thierryr"/>
+    <mailing-list>i18n-malagasy-gnome@gna.org</mailing-list>
+    <mailing-list-subscribe>https://mail.gna.org/listinfo/i18n-malagasy-gnome</mailing-list-subscribe>
   </team>
   <team id="ms">
     <_language id="ms">Malay</_language>
