@@ -1,5 +1,10 @@
 2007-03-01  Claude Paroz  <claude@2xlibre.net>
 
+	* people.xml.in:
+	* translation-teams.xml.in: Updated teams and people (fr, ku, mg).
+
+2007-03-01  Claude Paroz  <claude@2xlibre.net>
+
 	* gnome-modules.xml.in: Add references to 3 gnome-games manuals.
 	* releases.xml.in: Branched gucharmap for gnome-2-16.
 
